# osrs-tools

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  conanfile.py  osrs-tools.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
conan/profiles/: x86_64-linux-gcc12-debug  x86_64-linux-gcc12-release
projects/: CMakeLists.txt
projects/loot_tracker/: CMakeLists.txt  main.cpp
